# gitsummarizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  pyproject.toml  pytest.ini  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-tests.yml  test.yml
gitsummarizer/: __init__.py  cli.py  config.py  git_utils.py  summarizer.py
gitsummarizer/models/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai.py
tests/: test_cli.py  test_config.py  test_git_utils.py  test_models.py  test_summarizers.py
