[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsummarizer"
version = "0.5.0"
description = "Human-readable summaries of git changes and commits"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Santhosh Sachin", email = "sandy42107@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "gitpython>=3.1.0",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/SANTHOSH-SACHIN/gitsummarizer"
Bug_Tracker = "https://github.com/SANTHOSH-SACHIN/gitsummarizer/issues"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
